kubernetes/manifest/base/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myaiplatform-deployment
  namespace: myaiplatform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myaiplatform
  template:
    metadata:
      labels:
        app: myaiplatform
    spec:
      containers:
      - name: myaiplatform
        image: ghcr.io/myaiplatform/myaiplatform:main
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "500Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        tty: true
        volumeMounts:
        - name: webui-volume
          mountPath: /app/backend/data
      volumes:
      - name: webui-volume
        persistentVolumeClaim:
          claimName: myaiplatform-pvc
