kubernetes/manifest/base/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myaiplatform-service
  namespace: myaiplatform
spec:
  type: NodePort  # Use LoadBalancer if you're on a cloud that supports it
  selector:
    app: myaiplatform
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # If using NodePort, you can optionally specify the nodePort:
      # nodePort: 30000
