kubernetes/manifest/base/webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myaiplatform-ingress
  namespace: myaiplatform
  #annotations:
    # Use appropriate annotations for your Ingress controller, e.g., for NGINX:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myaiplatform.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myaiplatform-service
            port:
              number: 8080
